Arregle el navbar de bootstrap del Index

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             </ul>
         </section> -->
 
-        <nav class="navbar navbar-expand-md" style="background-color: #1e1e1e;"
-            class="navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
