Se cambiaron los formatos de los archivos png que podian ser pasados a jpg para reducir su tamaño, y se comprimieron todas las imagenes que eran pesadas.

--- a/notas/nota-nascar1.html
+++ b/notas/nota-nascar1.html
@@ -93,7 +93,7 @@
                         Camaro #7 del JR Motorsports <br><br> </p>
 
                         <div class="image-container">
-                            <img src="../imgs/darlington3.png" alt="">
+                            <img src="../imgs/darlington3.jpg" alt="">
                         </div>
                         <p> Los horarios para estas carreras serán: <br><br>
 
