--- a/notas/nota-nascar3.html
+++ b/notas/nota-nascar3.html
@@ -86,7 +86,7 @@
                         la Ford F-150 #38 del Front Row Motorsports.
 
                     <div class="image-container">
-                        <img src="../imgs/kansas3.png" alt="Nigel Kinrade / NKP / Motorsports Images">
+                        <img src="../imgs/kansas3.jpg" alt="Nigel Kinrade / NKP / Motorsports Images">
                     </div>
                     <p> Los horarios para estas carreras serán:<br><br>
                         Sábado - 06/05<br><br>
