Se agregaron a todos los archivos html sus respectivas etiquetas meta name description hechas con ChatGPT

--- a/pages/campeonato.html
+++ b/pages/campeonato.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overtime NASCAR | Campeonato</title>
+    <meta name="description" content="Descubre el emocionante campeonato de la temporada de NASCAR en nuestro sitio web. Sigue de cerca la clasificación actualizada de los pilotos y equipos líderes en la lucha por el título. Conoce quiénes se destacan en cada carrera, quiénes están en la cima de la tabla y quiénes están pisando fuerte para convertirse en campeones. ¡Sumérgete en la intensidad del campeonato de NASCAR con nosotros!">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
