--- a/pages/videos.html
+++ b/pages/videos.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Overtime NASCAR | Videos</title>
+    <meta name="description" content="Sumérgete en el emocionante mundo de la categoría de NASCAR a través de nuestra amplia colección de videos. Disfruta de las mejores carreras, momentos destacados y entrevistas exclusivas con los pilotos más destacados. Desde emocionantes adelantamientos hasta victorias históricas, nuestros videos te transportarán a la adrenalina de la pista. ¡No te pierdas ni un solo detalle y vive la pasión por NASCAR en cada reproducción!">
 </head>
 
 <body>
