--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <title>Overtime NASCAR | Inicio</title>
+    <meta name="description" content="Overtime: Tu fuente confiable de noticias de NASCAR. Mantente al día con las últimas actualizaciones, resultados de carreras y análisis exhaustivos. Descubre los secretos detrás del volante y disfruta de contenido exclusivo para los fanáticos más apasionados. ¡Entra en la pista con Overtime y vive la emoción de la NASCAR como nunca antes!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
