--- a/notas/nota-nascar1.html
+++ b/notas/nota-nascar1.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overtime | Noticia</title>
+    <meta name="description" content="¡Noticia exclusiva! Descubre todos los detalles de la emocionante carrera de NASCAR en el icónico circuito de Darlington. Conoce los momentos más destacados, las estrategias audaces y las sorpresas que se vivieron en esta competencia legendaria.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
