--- a/notas/nota-nascar2.html
+++ b/notas/nota-nascar2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overtime | Noticia</title>
+    <meta name="description" content="¡Noticia destacada! El equipo Joe Gibbs Racing alcanza una histórica victoria número 400 en el emocionante circuito de Kansas. Descubre cómo el equipo logró esta increíble hazaña, superando a sus competidores en una carrera llena de acción y estrategia. Conoce los pilotos involucrados, las emociones en el podio y el impacto de esta victoria en el campeonato. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
