--- a/notas/nota-nascar4.html
+++ b/notas/nota-nascar4.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overtime | Noticia</title>
+    <meta name="description" content="¡Noticia destacada! Martin Truex Jr conquista la Milla Monstruo en una increíble actuación en el Dover International Speedway. Descubre cómo Truex Jr superó a sus competidores en este desafiante óvalo, logrando una victoria dominante. Conoce los momentos más emocionantes de la carrera, las estrategias clave y la reacción de Truex Jr al cruzar la línea de meta.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
